crates/guicons/src/build/snapshots/guicons__build__generate__tests__family_with_a_different_variant_set_per_size_gets_distinct_types.snap
---
source: crates/guicons/src/build/generate.rs
expression: generate_builders(&icons)
---
pub struct Settings16VariantBuilder;

impl Settings16VariantBuilder {
    pub const fn filled(self) -> IconKey {
        keys::SETTINGS_16_FILLED
    }
}

pub struct Settings24VariantBuilder;

impl Settings24VariantBuilder {
    pub const fn filled(self) -> IconKey {
        keys::SETTINGS_24_FILLED
    }
    pub const fn regular(self) -> IconKey {
        keys::SETTINGS_24_REGULAR
    }
}

pub struct SettingsBuilder;

pub const fn settings() -> SettingsBuilder {
    SettingsBuilder
}

impl SettingsBuilder {
    pub const fn size_16(self) -> Settings16VariantBuilder {
        Settings16VariantBuilder
    }
    pub const fn size_24(self) -> Settings24VariantBuilder {
        Settings24VariantBuilder
    }
}
