crates/guicons/src/build/snapshots/guicons__build__generate__tests__family_with_a_single_icon_per_size_skips_the_variant_builder.snap
---
source: crates/guicons/src/build/generate.rs
expression: generate_builders(&icons)
---
pub struct LogoBuilder;

pub const fn logo() -> LogoBuilder {
    LogoBuilder
}

impl LogoBuilder {
    pub const fn size_16(self) -> IconKey {
        keys::LOGO_16
    }
    pub const fn size_32(self) -> IconKey {
        keys::LOGO_32
    }
}
