crates/guicons/src/build/snapshots/guicons__build__generate__tests__family_without_variant_or_size_is_a_bare_fn.snap
---
source: crates/guicons/src/build/generate.rs
expression: generate_builders(&icons)
---
pub const fn docker() -> IconKey {
    keys::DOCKER
}
